--- a/blog_game_dev.org
+++ b/blog_game_dev.org
@@ -1,146 +1,148 @@
 * game_dev
-1. [[http://blog.codingnow.com/2017/01/exponential_distribution.html][2017年01月: 10 连抽保底的概率模型]]
-2. [[http://blog.codingnow.com/2017/01/unity3d_sharplua.html][2017年01月: 在 Unity3D 的 Mono 虚拟机中嵌入 Lua 的一个方案]]
-3. [[http://blog.codingnow.com/2016/12/unity3d_remote_pvrtextool.html][2016年12月: 用分布式压缩贴图加快 Unity3D 的打包过程]]
-4. [[http://blog.codingnow.com/2016/11/etc_compose.html][2016年11月:  ETC 图素的合并]]
-5. [[http://blog.codingnow.com/2016/10/gamesync.html][2016年10月: 继续谈网络游戏的同步问题]]
-6. [[http://blog.codingnow.com/2016/10/synchronization.html][2016年10月: 放置类游戏的网络同步]]
-7. [[http://blog.codingnow.com/2016/09/shop_heroes_guild.html][2016年09月: Shop Heroes 的公会系统]]
-8. [[http://blog.codingnow.com/2016/09/shop_heroes_ecosystem.html][2016年09月: Shop Heroes 的经济系统]]
-9. [[http://blog.codingnow.com/2016/08/pvp_match.html][2016年08月: pvp 游戏如何解决玩家匹配等待时间过长的问题]]
-10. [[http://blog.codingnow.com/2016/08/stellaris.html][2016年08月: 群星的汉化及其它]]
-11. [[http://blog.codingnow.com/2016/07/req_mmo.html][2016年07月: 如何只基于请求回应模式实现 MMO 级别的场景服务]]
-12. [[http://blog.codingnow.com/2016/04/ooaoeeeeieoeoeaooao.html][2016年04月: 有创意必须实现出来才有意义]]
-13. [[http://blog.codingnow.com/2016/04/nae.html][2016年04月: 排行榜奖金的发放方法]]
-14. [[http://blog.codingnow.com/2016/02/isometric_scale_skew.html][2016年02月: 用 2d 缩放及斜切变换模拟斜视角下的旋转]]
-15. [[http://blog.codingnow.com/2016/01/assets.html][2016年01月: 资源包的设计]]
-16. [[http://blog.codingnow.com/2015/07/attack_heroes.html][2015年07月: 第一次提交绿光]]
-17. [[http://blog.codingnow.com/2015/05/rgbyuv.html][2015年05月: 卡通图片的压缩]]
-18. [[http://blog.codingnow.com/2014/11/rla_format.html][2014年11月: RLA 文件中的法线信息提取]]
-19. [[http://blog.codingnow.com/2014/09/sandbox_world.html][2014年09月: 随机地形生成]]
-20. [[http://blog.codingnow.com/2014/08/unity3d_asset_bundle.html][2014年08月: Unity3D asset bundle 格式简析]]
-21. [[http://blog.codingnow.com/2014/03/mmzb_redis.html][2014年03月: 谈谈陌陌争霸在数据库方面踩过的坑( Redis 篇)]]
-22. [[http://blog.codingnow.com/2014/03/mmzb_mongodb.html][2014年03月: 谈谈陌陌争霸在数据库方面踩过的坑(芒果篇)]]
-23. [[http://blog.codingnow.com/2014/03/mmzb_db.html][2014年03月: 谈谈陌陌争霸在数据库方面踩过的坑(前篇)]]
-24. [[http://blog.codingnow.com/2014/02/net_gamble.html][2014年02月: 如何让玩家相信游戏是公平的]]
-25. [[http://blog.codingnow.com/2014/01/routemap.html][2014年01月: COC Like 游戏中的寻路算法]]
-26. [[http://blog.codingnow.com/2014/01/isometric_tileset_engine.html][2014年01月: 斜视角游戏的地图渲染]]
-27. [[http://blog.codingnow.com/2013/12/ejoy2d.html][2013年12月: Ejoy2D 开源]]
-28. [[http://blog.codingnow.com/2013/09/edge_font.html][2013年09月: 字体勾边渲染的简单方法]]
-29. [[http://blog.codingnow.com/2013/04/dfont.html][2013年04月: 动态字体的贴图管理]]
-30. [[http://blog.codingnow.com/2013/02/clash_of_clans.html][2013年02月: Clash of Clans]]
-31. [[http://blog.codingnow.com/2013/01/pixel_light_scene.html][2013年01月: Pixel light 中的场景管理]]
-32. [[http://blog.codingnow.com/2012/12/fuzzy_logic.html][2012年12月: 模糊逻辑在 AI 中的应用]]
-33. [[http://blog.codingnow.com/2012/12/merchant.html][2012年12月: 网络游戏中商人系统的一点想法]]
-34. [[http://blog.codingnow.com/2012/11/phasing_technology.html][2012年11月: 相位技术的实现]]
-35. [[http://blog.codingnow.com/2012/11/dev_note_29.html][2012年11月: 开发笔记(29) : agent 跨机 id 同步问题]]
-36. [[http://blog.codingnow.com/2012/11/dev_note_28.html][2012年11月: 开发笔记(28) : 重构优化]]
-37. [[http://blog.codingnow.com/2012/10/sc2_editor.html][2012年10月: 星际争霸2编辑器的初接触]]
-38. [[http://blog.codingnow.com/2012/10/dev_note_27.html][2012年10月: 开发笔记(27) : 公式计算机]]
-39. [[http://blog.codingnow.com/2012/09/dev_note_26.html][2012年09月: 开发笔记(26) : AOI 以及移动模块]]
-40. [[http://blog.codingnow.com/2012/09/the_design_of_skynet.html][2012年09月: Skynet 设计综述]]
-41. [[http://blog.codingnow.com/2012/08/dev_note_25.html][2012年08月: 开发笔记(25) : 改进的 RPC]]
-42. [[http://blog.codingnow.com/2012/08/skynet_dev.html][2012年08月: Skynet 的一些改进和进展]]
-43. [[http://blog.codingnow.com/2012/08/skynet_harbor_rpc.html][2012年08月: Skynet 集群及 RPC ]]
-44. [[http://blog.codingnow.com/2012/07/dev_note_24.html][2012年07月: 开发笔记(24) : Lua State 间的数据共享]]
-45. [[http://blog.codingnow.com/2012/07/dev_note_23.html][2012年07月: 开发笔记(23) : 原子字典]]
-46. [[http://blog.codingnow.com/2012/07/dev_note_22.html][2012年07月: 开发笔记(22) : 背包系统]]
-47. [[http://blog.codingnow.com/2012/06/dev_note_20.html][2012年06月: 开发笔记(20) : 交易系统]]
-48. [[http://blog.codingnow.com/2012/05/dev_note_19.html][2012年05月: 开发笔记(19) : 怪物行走控制]]
-49. [[http://blog.codingnow.com/2012/04/dev_note_17.html][2012年04月: 开发笔记(17) : 策划表格公式处理]]
-50. [[http://blog.codingnow.com/2012/03/dev_note_16.html][2012年03月: 开发笔记(16) : Timer 和异步事件]]
-51. [[http://blog.codingnow.com/2012/03/dev_note_15.html][2012年03月: 开发笔记(15) : 热更新]]
-52. [[http://blog.codingnow.com/2012/03/dev_note_14.html][2012年03月: 开发笔记(14) : 工作总结及玩家状态广播]]
-53. [[http://blog.codingnow.com/2012/03/dev_note_13.html][2012年03月: 开发笔记 (13) : AOI 服务的设计与实现]]
-54. [[http://blog.codingnow.com/2012/03/dev_note_12.html][2012年03月: 开发笔记(12) : 位置同步策略]]
-55. [[http://blog.codingnow.com/2012/02/dev_note_10.html][2012年02月: 开发笔记 (10) ：内存数据库]]
-56. [[http://blog.codingnow.com/2012/01/dev_note_8.html][2012年01月: 开发笔记 (8) : 策划公式的 DSL 设计]]
-57. [[http://blog.codingnow.com/2011/12/dev_note_6.html][2011年12月: 开发笔记 (6) : 结构化数据的共享存储]]
-58. [[http://blog.codingnow.com/2011/12/dev_note_5.html][2011年12月: 开发笔记 (5) : 场景服务及避免读写锁]]
-59. [[http://blog.codingnow.com/2011/12/dev_note_4.html][2011年12月: 开发笔记 (4) :  Agent 的消息循环及 RPC]]
-60. [[http://blog.codingnow.com/2011/11/mathematical_design.html][2011年11月: 游戏数值策划]]
-61. [[http://blog.codingnow.com/2011/11/dev_note_2.html][2011年11月: 开发笔记 (2) ：redis 数据库结构设计 ]]
-62. [[http://blog.codingnow.com/2011/11/dev_note_1.html][2011年11月: 开发笔记 (1)]]
-63. [[http://blog.codingnow.com/2011/10/virtual_currency.html][2011年10月: 游戏收费方式的一点思考]]
-64. [[http://blog.codingnow.com/2011/08/mmorpg_scene_server.html][2011年08月: MMORPG 中场景服务的抽象]]
-65. [[http://blog.codingnow.com/2011/06/mmorpg_server.html][2011年06月: 传统 MMORPG 通讯模式实现的一点想法]]
-66. [[http://blog.codingnow.com/2011/05/asset_management.html][2011年05月: 游戏开发中美术资源的管理]]
-67. [[http://blog.codingnow.com/2011/04/3d_engine_plan.html][2011年04月: 如果从头开发新的 3d engine]]
-68. [[http://blog.codingnow.com/2011/03/queue_system.html][2011年03月: 服务器排队系统的一点想法 ]]
-69. [[http://blog.codingnow.com/2011/03/optimize_io.html][2011年03月: 梦幻西游服务器 IO 问题]]
-70. [[http://blog.codingnow.com/2011/02/zeromq_message_patterns.html][2011年02月: ZeroMQ 的模式]]
-71. [[http://blog.codingnow.com/2011/01/fork_multi_thread.html][2011年01月: 极不和谐的 fork 多线程程序]]
-72. [[http://blog.codingnow.com/2011/01/virtual_goods_verify.html][2011年01月: 网络游戏物品校验系统的设计]]
-73. [[http://blog.codingnow.com/2011/01/memdb.html][2011年01月: 梦幻西游服务器的优化]]
-74. [[http://blog.codingnow.com/2010/12/optimize_game_server_io.html][2010年12月: 梦幻西游服务器 IO 的一点优化]]
-75. [[http://blog.codingnow.com/2010/11/shared_resource.html][2010年11月: 多进程资源共享及多样化加载]]
-76. [[http://blog.codingnow.com/2010/08/libvpx.html][2010年08月: 在游戏引擎中播放视频]]
-77. [[http://blog.codingnow.com/2010/08/resource_pack.html][2010年08月: 游戏资源的压缩、打包与补丁更新]]
-78. [[http://blog.codingnow.com/2010/07/game_network.html][2010年07月: 游戏多服务器架构的一点想法]]
-79. [[http://blog.codingnow.com/2009/12/point_light_management.html][2009年12月: 点光源的管理]]
-80. [[http://blog.codingnow.com/2009/11/skeletal_animation.html][2009年11月: 骨骼动画的插值与融合]]
-81. [[http://blog.codingnow.com/2009/09/aoi_watchtower.html][2009年09月: AOI 的优化]]
-82. [[http://blog.codingnow.com/2009/09/action_game.html][2009年09月: 游戏动作感设计初探]]
-83. [[http://blog.codingnow.com/2009/07/3d_engine_texture_management.html][2009年07月: 3d engine 中的贴图资源管理]]
-84. [[http://blog.codingnow.com/2009/05/tree.html][2009年05月: 树结构的管理]]
-85. [[http://blog.codingnow.com/2009/04/lua_ui_plugin_security.html][2009年04月: 为 lua 插件提供一个安全的环境]]
-86. [[http://blog.codingnow.com/2009/03/terrain_texture.html][2009年03月: 关于地表贴图]]
-87. [[http://blog.codingnow.com/2009/03/resource_management.html][2009年03月: 关于游戏中资源管理的一些补充]]
-88. [[http://blog.codingnow.com/2009/02/mapeditor.html][2009年02月: 关于地图编辑器的一些想法]]
-89. [[http://blog.codingnow.com/2008/11/xmpp.html][2008年11月: XMPP 简单研究]]
-90. [[http://blog.codingnow.com/2008/11/aoi_server.html][2008年11月: AOI 服务器的实现]]
-91. [[http://blog.codingnow.com/2008/07/aoi.html][2008年07月: 把 AOI 的部分独立出来]]
-92. [[http://blog.codingnow.com/2008/07/path_finding.html][2008年07月: 一个简单的寻路算法]]
-93. [[http://blog.codingnow.com/2008/06/camera_interface.html][2008年06月: 摄象机接口的设计]]
-94. [[http://blog.codingnow.com/2008/05/3d_engine.html][2008年05月: 3d 引擎中对场景数据的接口设计]]
-95. [[http://blog.codingnow.com/2008/05/opengl_4444.html][2008年05月: 关于 openGL 的 4444 贴图]]
-96. [[http://blog.codingnow.com/2008/05/eoeouaeaeaa.html][2008年05月: 数值调整、模拟器、编辑器]]
-97. [[http://blog.codingnow.com/2008/05/passed_days_2.html][2008年05月: 那些日子（二）]]
-98. [[http://blog.codingnow.com/2008/04/passed_days_1.html][2008年04月: 那些日子（一）]]
-99. [[http://blog.codingnow.com/2008/04/essence.html][2008年04月: 游戏数值公式的表象与本质]]
-100. [[http://blog.codingnow.com/2008/04/quasi-random_sequences.html][2008年04月: 不那么随机的随机数列]]
-101. [[http://blog.codingnow.com/2008/04/fps.html][2008年04月: 游戏的帧率控制]]
-102. [[http://blog.codingnow.com/2008/04/reverse_feedback.html][2008年04月: 负反馈系统在模型动画控制中的应用]]
-103. [[http://blog.codingnow.com/2008/03/hot_update.html][2008年03月: 基于 lua 的热更新系统设计要点]]
-104. [[http://blog.codingnow.com/2008/03/queue_system.html][2008年03月: MMO 的排队系统]]
-105. [[http://blog.codingnow.com/2008/02/animation_interface.html][2008年02月: 角色动作控制接口的设计]]
-106. [[http://blog.codingnow.com/2008/02/keyboard_gamepad.html][2008年02月: 键盘毕竟不是手柄]]
-107. [[http://blog.codingnow.com/2007/11/deepcold.html][2007年11月: 讲稿]]
-108. [[http://blog.codingnow.com/2007/11/random.html][2007年11月: 随机数有多随机？]]
-109. [[http://blog.codingnow.com/2007/11/inertia_thinking.html][2007年11月: 思维的惯性]]
-110. [[http://blog.codingnow.com/2007/10/mmo.html][2007年10月: 网络游戏的技术基础]]
-111. [[http://blog.codingnow.com/2007/07/mesh_compress.html][2007年07月: 模型顶点数据的压缩]]
-112. [[http://blog.codingnow.com/2007/07/money_in_game.html][2007年07月: 游戏中的货币]]
-113. [[http://blog.codingnow.com/2007/07/bigworld.html][2007年07月: 唯一的游戏世界]]
-114. [[http://blog.codingnow.com/2007/07/server_communication.html][2007年07月: 游戏服务器组间的通讯]]
-115. [[http://blog.codingnow.com/2007/06/platform_independence.html][2007年06月: 平台无关的游戏引擎]]
-116. [[http://blog.codingnow.com/2007/06/2007_video_card.html][2007年06月: 2007 年玩家主流显卡配置]]
-117. [[http://blog.codingnow.com/2007/05/dxt.html][2007年05月: DXT 图片压缩]]
-118. [[http://blog.codingnow.com/2007/05/mutilthread_preload.html][2007年05月: 资源的内存管理及多线程预读]]
-119. [[http://blog.codingnow.com/2007/03/multicast.html][2007年03月: 游戏服务器内的组播]]
-120. [[http://blog.codingnow.com/2007/03/multi_entry.html][2007年03月: 游戏服务器处理多个连接入口的方案]]
-121. [[http://blog.codingnow.com/2007/03/mahjong.html][2007年03月: 为何麻将如此流行？]]
-122. [[http://blog.codingnow.com/2007/02/imagemagick.html][2007年02月: 我们需要 photoshop 之外的选择]]
-123. [[http://blog.codingnow.com/2007/02/user_authenticate.html][2007年02月: 多服务器的用户身份认证方案]]
-124. [[http://blog.codingnow.com/2007/01/3d_engine.html][2007年01月: 3D engine ，中间层的缺失]]
-125. [[http://blog.codingnow.com/2006/12/collision.html][2006年12月: 碰撞检测]]
-126. [[http://blog.codingnow.com/2006/12/main_loop_windows_timer.html][2006年12月: 在 Windows 下使用 Timer 驱动游戏]]
-127. [[http://blog.codingnow.com/2006/10/quadtree.html][2006年10月: 用四叉树管理散布在平面上的对象]]
-128. [[http://blog.codingnow.com/2006/10/data_server_design.html][2006年10月: 数据服务器的设计]]
-129. [[http://blog.codingnow.com/2006/10/multi_process_design.html][2006年10月: 多进程的游戏服务器设计]]
-130. [[http://blog.codingnow.com/2006/10/aoi.html][2006年10月: 服务器消息的广播]]
-131. [[http://blog.codingnow.com/2006/09/heartbeat_server.html][2006年09月: 心跳服务器]]
-132. [[http://blog.codingnow.com/2006/09/rpc.html][2006年09月: 目前我们的游戏服务器逻辑层设计草案]]
-133. [[http://blog.codingnow.com/2006/06/aeeeacoe.html][2006年06月: 魔兽世界之过?]]
-134. [[http://blog.codingnow.com/2006/06/currency.html][2006年06月: 网络游戏中的货币系统]]
-135. [[http://blog.codingnow.com/2006/05/dirtyrect_demo.html][2006年05月: 脏矩形演示 demo]]
-136. [[http://blog.codingnow.com/2006/05/iaeeoeo.html][2006年05月: 不太精准的时钟]]
-137. [[http://blog.codingnow.com/2006/04/boardcast_server.html][2006年04月: 广播和监督服务器]]
-138. [[http://blog.codingnow.com/2006/04/iocp_kqueue_epoll.html][2006年04月: IOCP , kqueue , epoll ... 有多重要？]]
-139. [[http://blog.codingnow.com/2006/04/sync.html][2006年04月: 网络游戏的对时以及同步问题]]
-140. [[http://blog.codingnow.com/2006/04/iuiaeie.html][2006年04月: 贴图的合并]]
-141. [[http://blog.codingnow.com/2006/03/cache.html][2006年03月: 基于垃圾回收的资源管理]]
-142. [[http://blog.codingnow.com/2006/03/ooeeeiaaeoeoaee.html][2006年03月: 以人为本，美术资源的归档]]
-143. [[http://blog.codingnow.com/2006/01/dynamic_loading.html][2006年01月: 动态加载资源]]
-144. [[http://blog.codingnow.com/2005/12/aoeioiie.html][2005年12月: 当编辑器也成为游戏]]
-145. [[http://blog.codingnow.com/2005/10/about_game_design.html][2005年10月: 游戏，一种奇怪的软件]]
+1. [[http://blog.codingnow.com/2017/04/git.html][2017年04月: 为什么美术和策划在使用 git 时会遇到更多麻烦]]
+2. [[http://blog.codingnow.com/2017/04/unity3d_memory.html][2017年04月: Unity3D 的大场景内存优化]]
+3. [[http://blog.codingnow.com/2017/01/exponential_distribution.html][2017年01月: 10 连抽保底的概率模型]]
+4. [[http://blog.codingnow.com/2017/01/unity3d_sharplua.html][2017年01月: 在 Unity3D 的 Mono 虚拟机中嵌入 Lua 的一个方案]]
+5. [[http://blog.codingnow.com/2016/12/unity3d_remote_pvrtextool.html][2016年12月: 用分布式压缩贴图加快 Unity3D 的打包过程]]
+6. [[http://blog.codingnow.com/2016/11/etc_compose.html][2016年11月:  ETC 图素的合并]]
+7. [[http://blog.codingnow.com/2016/10/gamesync.html][2016年10月: 继续谈网络游戏的同步问题]]
+8. [[http://blog.codingnow.com/2016/10/synchronization.html][2016年10月: 放置类游戏的网络同步]]
+9. [[http://blog.codingnow.com/2016/09/shop_heroes_guild.html][2016年09月: Shop Heroes 的公会系统]]
+10. [[http://blog.codingnow.com/2016/09/shop_heroes_ecosystem.html][2016年09月: Shop Heroes 的经济系统]]
+11. [[http://blog.codingnow.com/2016/08/pvp_match.html][2016年08月: pvp 游戏如何解决玩家匹配等待时间过长的问题]]
+12. [[http://blog.codingnow.com/2016/08/stellaris.html][2016年08月: 群星的汉化及其它]]
+13. [[http://blog.codingnow.com/2016/07/req_mmo.html][2016年07月: 如何只基于请求回应模式实现 MMO 级别的场景服务]]
+14. [[http://blog.codingnow.com/2016/04/ooaoeeeeieoeoeaooao.html][2016年04月: 有创意必须实现出来才有意义]]
+15. [[http://blog.codingnow.com/2016/04/nae.html][2016年04月: 排行榜奖金的发放方法]]
+16. [[http://blog.codingnow.com/2016/02/isometric_scale_skew.html][2016年02月: 用 2d 缩放及斜切变换模拟斜视角下的旋转]]
+17. [[http://blog.codingnow.com/2016/01/assets.html][2016年01月: 资源包的设计]]
+18. [[http://blog.codingnow.com/2015/07/attack_heroes.html][2015年07月: 第一次提交绿光]]
+19. [[http://blog.codingnow.com/2015/05/rgbyuv.html][2015年05月: 卡通图片的压缩]]
+20. [[http://blog.codingnow.com/2014/11/rla_format.html][2014年11月: RLA 文件中的法线信息提取]]
+21. [[http://blog.codingnow.com/2014/09/sandbox_world.html][2014年09月: 随机地形生成]]
+22. [[http://blog.codingnow.com/2014/08/unity3d_asset_bundle.html][2014年08月: Unity3D asset bundle 格式简析]]
+23. [[http://blog.codingnow.com/2014/03/mmzb_redis.html][2014年03月: 谈谈陌陌争霸在数据库方面踩过的坑( Redis 篇)]]
+24. [[http://blog.codingnow.com/2014/03/mmzb_mongodb.html][2014年03月: 谈谈陌陌争霸在数据库方面踩过的坑(芒果篇)]]
+25. [[http://blog.codingnow.com/2014/03/mmzb_db.html][2014年03月: 谈谈陌陌争霸在数据库方面踩过的坑(前篇)]]
+26. [[http://blog.codingnow.com/2014/02/net_gamble.html][2014年02月: 如何让玩家相信游戏是公平的]]
+27. [[http://blog.codingnow.com/2014/01/routemap.html][2014年01月: COC Like 游戏中的寻路算法]]
+28. [[http://blog.codingnow.com/2014/01/isometric_tileset_engine.html][2014年01月: 斜视角游戏的地图渲染]]
+29. [[http://blog.codingnow.com/2013/12/ejoy2d.html][2013年12月: Ejoy2D 开源]]
+30. [[http://blog.codingnow.com/2013/09/edge_font.html][2013年09月: 字体勾边渲染的简单方法]]
+31. [[http://blog.codingnow.com/2013/04/dfont.html][2013年04月: 动态字体的贴图管理]]
+32. [[http://blog.codingnow.com/2013/02/clash_of_clans.html][2013年02月: Clash of Clans]]
+33. [[http://blog.codingnow.com/2013/01/pixel_light_scene.html][2013年01月: Pixel light 中的场景管理]]
+34. [[http://blog.codingnow.com/2012/12/fuzzy_logic.html][2012年12月: 模糊逻辑在 AI 中的应用]]
+35. [[http://blog.codingnow.com/2012/12/merchant.html][2012年12月: 网络游戏中商人系统的一点想法]]
+36. [[http://blog.codingnow.com/2012/11/phasing_technology.html][2012年11月: 相位技术的实现]]
+37. [[http://blog.codingnow.com/2012/11/dev_note_29.html][2012年11月: 开发笔记(29) : agent 跨机 id 同步问题]]
+38. [[http://blog.codingnow.com/2012/11/dev_note_28.html][2012年11月: 开发笔记(28) : 重构优化]]
+39. [[http://blog.codingnow.com/2012/10/sc2_editor.html][2012年10月: 星际争霸2编辑器的初接触]]
+40. [[http://blog.codingnow.com/2012/10/dev_note_27.html][2012年10月: 开发笔记(27) : 公式计算机]]
+41. [[http://blog.codingnow.com/2012/09/dev_note_26.html][2012年09月: 开发笔记(26) : AOI 以及移动模块]]
+42. [[http://blog.codingnow.com/2012/09/the_design_of_skynet.html][2012年09月: Skynet 设计综述]]
+43. [[http://blog.codingnow.com/2012/08/dev_note_25.html][2012年08月: 开发笔记(25) : 改进的 RPC]]
+44. [[http://blog.codingnow.com/2012/08/skynet_dev.html][2012年08月: Skynet 的一些改进和进展]]
+45. [[http://blog.codingnow.com/2012/08/skynet_harbor_rpc.html][2012年08月: Skynet 集群及 RPC ]]
+46. [[http://blog.codingnow.com/2012/07/dev_note_24.html][2012年07月: 开发笔记(24) : Lua State 间的数据共享]]
+47. [[http://blog.codingnow.com/2012/07/dev_note_23.html][2012年07月: 开发笔记(23) : 原子字典]]
+48. [[http://blog.codingnow.com/2012/07/dev_note_22.html][2012年07月: 开发笔记(22) : 背包系统]]
+49. [[http://blog.codingnow.com/2012/06/dev_note_20.html][2012年06月: 开发笔记(20) : 交易系统]]
+50. [[http://blog.codingnow.com/2012/05/dev_note_19.html][2012年05月: 开发笔记(19) : 怪物行走控制]]
+51. [[http://blog.codingnow.com/2012/04/dev_note_17.html][2012年04月: 开发笔记(17) : 策划表格公式处理]]
+52. [[http://blog.codingnow.com/2012/03/dev_note_16.html][2012年03月: 开发笔记(16) : Timer 和异步事件]]
+53. [[http://blog.codingnow.com/2012/03/dev_note_15.html][2012年03月: 开发笔记(15) : 热更新]]
+54. [[http://blog.codingnow.com/2012/03/dev_note_14.html][2012年03月: 开发笔记(14) : 工作总结及玩家状态广播]]
+55. [[http://blog.codingnow.com/2012/03/dev_note_13.html][2012年03月: 开发笔记 (13) : AOI 服务的设计与实现]]
+56. [[http://blog.codingnow.com/2012/03/dev_note_12.html][2012年03月: 开发笔记(12) : 位置同步策略]]
+57. [[http://blog.codingnow.com/2012/02/dev_note_10.html][2012年02月: 开发笔记 (10) ：内存数据库]]
+58. [[http://blog.codingnow.com/2012/01/dev_note_8.html][2012年01月: 开发笔记 (8) : 策划公式的 DSL 设计]]
+59. [[http://blog.codingnow.com/2011/12/dev_note_6.html][2011年12月: 开发笔记 (6) : 结构化数据的共享存储]]
+60. [[http://blog.codingnow.com/2011/12/dev_note_5.html][2011年12月: 开发笔记 (5) : 场景服务及避免读写锁]]
+61. [[http://blog.codingnow.com/2011/12/dev_note_4.html][2011年12月: 开发笔记 (4) :  Agent 的消息循环及 RPC]]
+62. [[http://blog.codingnow.com/2011/11/mathematical_design.html][2011年11月: 游戏数值策划]]
+63. [[http://blog.codingnow.com/2011/11/dev_note_2.html][2011年11月: 开发笔记 (2) ：redis 数据库结构设计 ]]
+64. [[http://blog.codingnow.com/2011/11/dev_note_1.html][2011年11月: 开发笔记 (1)]]
+65. [[http://blog.codingnow.com/2011/10/virtual_currency.html][2011年10月: 游戏收费方式的一点思考]]
+66. [[http://blog.codingnow.com/2011/08/mmorpg_scene_server.html][2011年08月: MMORPG 中场景服务的抽象]]
+67. [[http://blog.codingnow.com/2011/06/mmorpg_server.html][2011年06月: 传统 MMORPG 通讯模式实现的一点想法]]
+68. [[http://blog.codingnow.com/2011/05/asset_management.html][2011年05月: 游戏开发中美术资源的管理]]
+69. [[http://blog.codingnow.com/2011/04/3d_engine_plan.html][2011年04月: 如果从头开发新的 3d engine]]
+70. [[http://blog.codingnow.com/2011/03/queue_system.html][2011年03月: 服务器排队系统的一点想法 ]]
+71. [[http://blog.codingnow.com/2011/03/optimize_io.html][2011年03月: 梦幻西游服务器 IO 问题]]
+72. [[http://blog.codingnow.com/2011/02/zeromq_message_patterns.html][2011年02月: ZeroMQ 的模式]]
+73. [[http://blog.codingnow.com/2011/01/fork_multi_thread.html][2011年01月: 极不和谐的 fork 多线程程序]]
+74. [[http://blog.codingnow.com/2011/01/virtual_goods_verify.html][2011年01月: 网络游戏物品校验系统的设计]]
+75. [[http://blog.codingnow.com/2011/01/memdb.html][2011年01月: 梦幻西游服务器的优化]]
+76. [[http://blog.codingnow.com/2010/12/optimize_game_server_io.html][2010年12月: 梦幻西游服务器 IO 的一点优化]]
+77. [[http://blog.codingnow.com/2010/11/shared_resource.html][2010年11月: 多进程资源共享及多样化加载]]
+78. [[http://blog.codingnow.com/2010/08/libvpx.html][2010年08月: 在游戏引擎中播放视频]]
+79. [[http://blog.codingnow.com/2010/08/resource_pack.html][2010年08月: 游戏资源的压缩、打包与补丁更新]]
+80. [[http://blog.codingnow.com/2010/07/game_network.html][2010年07月: 游戏多服务器架构的一点想法]]
+81. [[http://blog.codingnow.com/2009/12/point_light_management.html][2009年12月: 点光源的管理]]
+82. [[http://blog.codingnow.com/2009/11/skeletal_animation.html][2009年11月: 骨骼动画的插值与融合]]
+83. [[http://blog.codingnow.com/2009/09/aoi_watchtower.html][2009年09月: AOI 的优化]]
+84. [[http://blog.codingnow.com/2009/09/action_game.html][2009年09月: 游戏动作感设计初探]]
+85. [[http://blog.codingnow.com/2009/07/3d_engine_texture_management.html][2009年07月: 3d engine 中的贴图资源管理]]
+86. [[http://blog.codingnow.com/2009/05/tree.html][2009年05月: 树结构的管理]]
+87. [[http://blog.codingnow.com/2009/04/lua_ui_plugin_security.html][2009年04月: 为 lua 插件提供一个安全的环境]]
+88. [[http://blog.codingnow.com/2009/03/terrain_texture.html][2009年03月: 关于地表贴图]]
+89. [[http://blog.codingnow.com/2009/03/resource_management.html][2009年03月: 关于游戏中资源管理的一些补充]]
+90. [[http://blog.codingnow.com/2009/02/mapeditor.html][2009年02月: 关于地图编辑器的一些想法]]
+91. [[http://blog.codingnow.com/2008/11/xmpp.html][2008年11月: XMPP 简单研究]]
+92. [[http://blog.codingnow.com/2008/11/aoi_server.html][2008年11月: AOI 服务器的实现]]
+93. [[http://blog.codingnow.com/2008/07/aoi.html][2008年07月: 把 AOI 的部分独立出来]]
+94. [[http://blog.codingnow.com/2008/07/path_finding.html][2008年07月: 一个简单的寻路算法]]
+95. [[http://blog.codingnow.com/2008/06/camera_interface.html][2008年06月: 摄象机接口的设计]]
+96. [[http://blog.codingnow.com/2008/05/3d_engine.html][2008年05月: 3d 引擎中对场景数据的接口设计]]
+97. [[http://blog.codingnow.com/2008/05/opengl_4444.html][2008年05月: 关于 openGL 的 4444 贴图]]
+98. [[http://blog.codingnow.com/2008/05/eoeouaeaeaa.html][2008年05月: 数值调整、模拟器、编辑器]]
+99. [[http://blog.codingnow.com/2008/05/passed_days_2.html][2008年05月: 那些日子（二）]]
+100. [[http://blog.codingnow.com/2008/04/passed_days_1.html][2008年04月: 那些日子（一）]]
+101. [[http://blog.codingnow.com/2008/04/essence.html][2008年04月: 游戏数值公式的表象与本质]]
+102. [[http://blog.codingnow.com/2008/04/quasi-random_sequences.html][2008年04月: 不那么随机的随机数列]]
+103. [[http://blog.codingnow.com/2008/04/fps.html][2008年04月: 游戏的帧率控制]]
+104. [[http://blog.codingnow.com/2008/04/reverse_feedback.html][2008年04月: 负反馈系统在模型动画控制中的应用]]
+105. [[http://blog.codingnow.com/2008/03/hot_update.html][2008年03月: 基于 lua 的热更新系统设计要点]]
+106. [[http://blog.codingnow.com/2008/03/queue_system.html][2008年03月: MMO 的排队系统]]
+107. [[http://blog.codingnow.com/2008/02/animation_interface.html][2008年02月: 角色动作控制接口的设计]]
+108. [[http://blog.codingnow.com/2008/02/keyboard_gamepad.html][2008年02月: 键盘毕竟不是手柄]]
+109. [[http://blog.codingnow.com/2007/11/deepcold.html][2007年11月: 讲稿]]
+110. [[http://blog.codingnow.com/2007/11/random.html][2007年11月: 随机数有多随机？]]
+111. [[http://blog.codingnow.com/2007/11/inertia_thinking.html][2007年11月: 思维的惯性]]
+112. [[http://blog.codingnow.com/2007/10/mmo.html][2007年10月: 网络游戏的技术基础]]
+113. [[http://blog.codingnow.com/2007/07/mesh_compress.html][2007年07月: 模型顶点数据的压缩]]
+114. [[http://blog.codingnow.com/2007/07/money_in_game.html][2007年07月: 游戏中的货币]]
+115. [[http://blog.codingnow.com/2007/07/bigworld.html][2007年07月: 唯一的游戏世界]]
+116. [[http://blog.codingnow.com/2007/07/server_communication.html][2007年07月: 游戏服务器组间的通讯]]
+117. [[http://blog.codingnow.com/2007/06/platform_independence.html][2007年06月: 平台无关的游戏引擎]]
+118. [[http://blog.codingnow.com/2007/06/2007_video_card.html][2007年06月: 2007 年玩家主流显卡配置]]
+119. [[http://blog.codingnow.com/2007/05/dxt.html][2007年05月: DXT 图片压缩]]
+120. [[http://blog.codingnow.com/2007/05/mutilthread_preload.html][2007年05月: 资源的内存管理及多线程预读]]
+121. [[http://blog.codingnow.com/2007/03/multicast.html][2007年03月: 游戏服务器内的组播]]
+122. [[http://blog.codingnow.com/2007/03/multi_entry.html][2007年03月: 游戏服务器处理多个连接入口的方案]]
+123. [[http://blog.codingnow.com/2007/03/mahjong.html][2007年03月: 为何麻将如此流行？]]
+124. [[http://blog.codingnow.com/2007/02/imagemagick.html][2007年02月: 我们需要 photoshop 之外的选择]]
+125. [[http://blog.codingnow.com/2007/02/user_authenticate.html][2007年02月: 多服务器的用户身份认证方案]]
+126. [[http://blog.codingnow.com/2007/01/3d_engine.html][2007年01月: 3D engine ，中间层的缺失]]
+127. [[http://blog.codingnow.com/2006/12/collision.html][2006年12月: 碰撞检测]]
+128. [[http://blog.codingnow.com/2006/12/main_loop_windows_timer.html][2006年12月: 在 Windows 下使用 Timer 驱动游戏]]
+129. [[http://blog.codingnow.com/2006/10/quadtree.html][2006年10月: 用四叉树管理散布在平面上的对象]]
+130. [[http://blog.codingnow.com/2006/10/data_server_design.html][2006年10月: 数据服务器的设计]]
+131. [[http://blog.codingnow.com/2006/10/multi_process_design.html][2006年10月: 多进程的游戏服务器设计]]
+132. [[http://blog.codingnow.com/2006/10/aoi.html][2006年10月: 服务器消息的广播]]
+133. [[http://blog.codingnow.com/2006/09/heartbeat_server.html][2006年09月: 心跳服务器]]
+134. [[http://blog.codingnow.com/2006/09/rpc.html][2006年09月: 目前我们的游戏服务器逻辑层设计草案]]
+135. [[http://blog.codingnow.com/2006/06/aeeeacoe.html][2006年06月: 魔兽世界之过?]]
+136. [[http://blog.codingnow.com/2006/06/currency.html][2006年06月: 网络游戏中的货币系统]]
+137. [[http://blog.codingnow.com/2006/05/dirtyrect_demo.html][2006年05月: 脏矩形演示 demo]]
+138. [[http://blog.codingnow.com/2006/05/iaeeoeo.html][2006年05月: 不太精准的时钟]]
+139. [[http://blog.codingnow.com/2006/04/boardcast_server.html][2006年04月: 广播和监督服务器]]
+140. [[http://blog.codingnow.com/2006/04/iocp_kqueue_epoll.html][2006年04月: IOCP , kqueue , epoll ... 有多重要？]]
+141. [[http://blog.codingnow.com/2006/04/sync.html][2006年04月: 网络游戏的对时以及同步问题]]
+142. [[http://blog.codingnow.com/2006/04/iuiaeie.html][2006年04月: 贴图的合并]]
+143. [[http://blog.codingnow.com/2006/03/cache.html][2006年03月: 基于垃圾回收的资源管理]]
+144. [[http://blog.codingnow.com/2006/03/ooeeeiaaeoeoaee.html][2006年03月: 以人为本，美术资源的归档]]
+145. [[http://blog.codingnow.com/2006/01/dynamic_loading.html][2006年01月: 动态加载资源]]
+146. [[http://blog.codingnow.com/2005/12/aoeioiie.html][2005年12月: 当编辑器也成为游戏]]
+147. [[http://blog.codingnow.com/2005/10/about_game_design.html][2005年10月: 游戏，一种奇怪的软件]]
