--- a/blog_skynet.org
+++ b/blog_skynet.org
@@ -1,80 +1,83 @@
 * skynet
-1. [[http://blog.codingnow.com/2016/07/skynet_transaction.html][2016年07月: 在 skynet 中如何实现多 actor 协作的事务]]
-2. [[http://blog.codingnow.com/2016/07/skynet_released.html][2016年07月: Skynet 1.0.0 发布]]
-3. [[http://blog.codingnow.com/2016/06/skynet_sample.html][2016年06月: skynet 的一个简单范例]]
-4. [[http://blog.codingnow.com/2016/06/seri_lua_object.html][2016年06月: 正确的序列化 Lua 中带元表的对象]]
-5. [[http://blog.codingnow.com/2016/06/skynet_gettingstarted.html][2016年06月: skynet 入门指南]]
-6. [[http://blog.codingnow.com/2016/05/skynet_proxy.html][2016年05月: 代理服务和过载保护]]
-7. [[http://blog.codingnow.com/2016/05/skynet_memory.html][2016年05月: skynet 服务的沙盒保护]]
-8. [[http://blog.codingnow.com/2016/03/skynet_reload.html][2016年03月: 重载一个 skynet 中的 lua 服务]]
-9. [[http://blog.codingnow.com/2016/03/skynet_tcp_package.html][2016年03月: 在 skynet 中处理 TCP 的分包]]
-10. [[http://blog.codingnow.com/2016/01/reference_count.html][2016年01月: 基于引用计数的对象生命期管理]]
-11. [[http://blog.codingnow.com/2016/01/skynet_mq.html][2016年01月: skynet 消息队列的新设计(接上文)]]
-12. [[http://blog.codingnow.com/2016/01/skynet2.html][2016年01月: skynet 消息分发及服务调度的新设计]]
-13. [[http://blog.codingnow.com/2015/12/skynet_rc.html][2015年12月: Skynet 1.0.0 RC 版发布]]
-14. [[http://blog.codingnow.com/2015/12/skynet_coroutine.html][2015年12月: skynet 里的 coroutine]]
-15. [[http://blog.codingnow.com/2015/11/rpc.html][2015年11月: RPC 之恶]]
-16. [[http://blog.codingnow.com/2015/11/skynet_crontab.html][2015年11月: skynet 中实现一个 crontab 的方法]]
-17. [[http://blog.codingnow.com/2015/10/timeout_skynetcall.html][2015年10月: 给 skynet.call 加上超时]]
-18. [[http://blog.codingnow.com/2015/08/lua_vm_share_string.html][2015年08月: 共享 lua vm 间的小字符串]]
-19. [[http://blog.codingnow.com/2015/08/memory_leak_bug.html][2015年08月: 一个内存泄露 bug]]
-20. [[http://blog.codingnow.com/2015/08/skynet_cluster_rpc_limit.html][2015年08月: 去掉 skynet 中 cluster rpc 的消息长度限制]]
-21. [[http://blog.codingnow.com/2015/07/skynet_lua_allocator.html][2015年07月: lua 分配器的一些想法及实践]]
-22. [[http://blog.codingnow.com/2015/06/skynet_socket_sharedobject.html][2015年06月: skynet 对客户端广播的方案]]
-23. [[http://blog.codingnow.com/2015/05/sproto_default_value.html][2015年05月: sproto 的缺省值处理]]
-24. [[http://blog.codingnow.com/2015/04/ltask.html][2015年04月: ltask ：用于 lua 的多任务库]]
-25. [[http://blog.codingnow.com/2015/04/skynet_mmo.html][2015年04月: 基于 skynet 的 MMO 服务器设计]]
-26. [[http://blog.codingnow.com/2015/04/handlemap.html][2015年04月: 对象到数字 ID 的映射]]
-27. [[http://blog.codingnow.com/2015/04/skynet_sproto_bug.html][2015年04月: skynet 近期更新及 sproto 若干 bug 的修复]]
-28. [[http://blog.codingnow.com/2015/03/skynet_signal.html][2015年03月: 跳出死循环]]
-29. [[http://blog.codingnow.com/2015/02/skynet_10_plans.html][2015年02月: skynet 1.0 发布计划]]
-30. [[http://blog.codingnow.com/2015/02/skynet_debugger.html][2015年02月: 在线调试 Lua 代码]]
-31. [[http://blog.codingnow.com/2015/02/inject_lua_code.html][2015年02月: 怎样在运行时插入运行一段 Lua 代码]]
-32. [[http://blog.codingnow.com/2015/01/lua_53_update.html][2015年01月: Lua 5.3 升级注意]]
-33. [[http://blog.codingnow.com/2015/01/skynet_netpack.html][2015年01月: 为什么 skynet 提供的包协议只用 2 个字节表示包长度]]
-34. [[http://blog.codingnow.com/2015/01/lua_52_53.html][2015年01月: 从 Lua 5.2 迁移到 5.3]]
-35. [[http://blog.codingnow.com/2014/12/skynet_meeting.html][2014年12月: skynet 社区广州聚会小记]]
-36. [[http://blog.codingnow.com/2014/12/skynet_spinlock.html][2014年12月: 乐观锁和悲观锁]]
-37. [[http://blog.codingnow.com/2014/11/skynet_ae_udp_oeoe.html][2014年11月: skynet 的 UDP  支持]]
-38. [[http://blog.codingnow.com/2014/10/skynet_overload.html][2014年10月: skynet 服务的过载保护]]
-39. [[http://blog.codingnow.com/2014/08/ueeoca.html][2014年08月: 近日工作记录]]
-40. [[http://blog.codingnow.com/2014/08/stm.html][2014年08月: STM 的简单实现]]
-41. [[http://blog.codingnow.com/2014/07/skynet_response.html][2014年07月: skynet 中如何实现邮件达到通知服务]]
-42. [[http://blog.codingnow.com/2014/07/skynet_http.html][2014年07月: 给 skynet 增加 http 服务器模块]]
-43. [[http://blog.codingnow.com/2014/07/skynet_msgserver.html][2014年07月: skynet 消息服务器支持]]
-44. [[http://blog.codingnow.com/2014/07/skynet_short_connection.html][2014年07月: 计划给 skynet 增加短连接的支持]]
-45. [[http://blog.codingnow.com/2014/06/skynet_harbor_redesign.html][2014年06月: 重新设计并实现了 skynet 的 harbor 模块]]
-46. [[http://blog.codingnow.com/2014/06/skynet_tshirt.html][2014年06月: skynet 主题 T 恤]]
-47. [[http://blog.codingnow.com/2014/06/skynet_cluster.html][2014年06月: skynet 的集群方案]]
-48. [[http://blog.codingnow.com/2014/05/skynet_logo.html][2014年05月: skynet logo]]
-49. [[http://blog.codingnow.com/2014/05/skynet_o_logo.html][2014年05月: skynet 征集 logo]]
-50. [[http://blog.codingnow.com/2014/05/skynet_v020.html][2014年05月: skynet v0.2.0 发布]]
-51. [[http://blog.codingnow.com/2014/05/skynet_mq_flags.html][2014年05月: skynet 消息队列调度算法的一点说明]]
-52. [[http://blog.codingnow.com/2014/04/skynet_multicast.html][2014年04月: skynet 的新组播方案]]
-53. [[http://blog.codingnow.com/2014/04/skynet_release.html][2014年04月: Skynet 发布第一个正式版]]
-54. [[http://blog.codingnow.com/2014/04/skynet_snax.html][2014年04月: skynet 的 snax 框架及热更新方案]]
-55. [[http://blog.codingnow.com/2014/04/skynet_gate_lua_version.html][2014年04月: 对 skynet 的 gate 服务的重构]]
-56. [[http://blog.codingnow.com/2014/03/lua_shared_proto.html][2014年03月: 在不同的 lua vm 间共享 Proto]]
-57. [[http://blog.codingnow.com/2014/03/skynet_socket_channel.html][2014年03月: Skynet 新的 socket.channel 模式]]
-58. [[http://blog.codingnow.com/2014/03/mmzb_redis.html][2014年03月: 谈谈陌陌争霸在数据库方面踩过的坑( Redis 篇)]]
-59. [[http://blog.codingnow.com/2013/12/skynet_lua_alloc.html][2013年12月: skynet lua 服务的内存管理优化]]
-60. [[http://blog.codingnow.com/2013/12/skynet_agent_pool.html][2013年12月: skynet 服务启动优化]]
-61. [[http://blog.codingnow.com/2013/12/skynet_monitor.html][2013年12月: Skynet 的服务监控及远程调用]]
-62. [[http://blog.codingnow.com/2013/10/skynet_lua_coroutine.html][2013年10月: skynet 中 Lua 服务的消息处理]]
-63. [[http://blog.codingnow.com/2013/09/skynet_bootstrap.html][2013年09月: skynet 的启动流程中的异步 IO 问题]]
-64. [[http://blog.codingnow.com/2013/08/skynet_update.html][2013年08月: Skynet 的一次大更新]]
-65. [[http://blog.codingnow.com/2013/08/exit_skynet.html][2013年08月: 如何安全的退出 skynet ]]
-66. [[http://blog.codingnow.com/2013/07/skynet_mongo_driver.html][2013年07月: 给  skynet 添加 mongo driver]]
-67. [[http://blog.codingnow.com/2013/07/coroutine_reuse.html][2013年07月: coroutine 的回收利用]]
-68. [[http://blog.codingnow.com/2013/07/improve_skynet_socket_lib.html][2013年07月: 增强了 skynet 的 socket 库]]
-69. [[http://blog.codingnow.com/2013/07/hive_socket.html][2013年07月: Hive 增加了 socket 库]]
-70. [[http://blog.codingnow.com/2013/06/skynet_watchdog.html][2013年06月: skynet 下的用户登陆问题]]
-71. [[http://blog.codingnow.com/2013/06/hive_lua_actor_model.html][2013年06月: Hive , Lua 的 actor 模型]]
-72. [[http://blog.codingnow.com/2013/06/skynet_socket.html][2013年06月: 重写了 skynet 中的 socket 库]]
-73. [[http://blog.codingnow.com/2013/05/skynet_gate.html][2013年05月: skynet 的网关模块的一点修改]]
-74. [[http://blog.codingnow.com/2012/10/bug_and_lockfree_queue.html][2012年10月: 并发问题 bug 小记]]
-75. [[http://blog.codingnow.com/2012/09/the_design_of_skynet.html][2012年09月: Skynet 设计综述]]
-76. [[http://blog.codingnow.com/2012/08/skynet_bug.html][2012年08月: 记录一个并发引起的 bug]]
-77. [[http://blog.codingnow.com/2012/08/skynet_dev.html][2012年08月: Skynet 的一些改进和进展]]
-78. [[http://blog.codingnow.com/2012/08/skynet_harbor_rpc.html][2012年08月: Skynet 集群及 RPC ]]
-79. [[http://blog.codingnow.com/2012/08/skynet.html][2012年08月: Skynet 开源]]
+1. [[http://blog.codingnow.com/2017/03/skynet_cluster.html][2017年03月: skynet  cluster 模块的设计与编码协议]]
+2. [[http://blog.codingnow.com/2017/03/skynet_1_1_rc.html][2017年03月: skynet 1.1 发布候选版本]]
+3. [[http://blog.codingnow.com/2017/03/sproto_new_feature.html][2017年03月: sproto 的一些更新]]
+4. [[http://blog.codingnow.com/2016/07/skynet_transaction.html][2016年07月: 在 skynet 中如何实现多 actor 协作的事务]]
+5. [[http://blog.codingnow.com/2016/07/skynet_released.html][2016年07月: Skynet 1.0.0 发布]]
+6. [[http://blog.codingnow.com/2016/06/skynet_sample.html][2016年06月: skynet 的一个简单范例]]
+7. [[http://blog.codingnow.com/2016/06/seri_lua_object.html][2016年06月: 正确的序列化 Lua 中带元表的对象]]
+8. [[http://blog.codingnow.com/2016/06/skynet_gettingstarted.html][2016年06月: skynet 入门指南]]
+9. [[http://blog.codingnow.com/2016/05/skynet_proxy.html][2016年05月: 代理服务和过载保护]]
+10. [[http://blog.codingnow.com/2016/05/skynet_memory.html][2016年05月: skynet 服务的沙盒保护]]
+11. [[http://blog.codingnow.com/2016/03/skynet_reload.html][2016年03月: 重载一个 skynet 中的 lua 服务]]
+12. [[http://blog.codingnow.com/2016/03/skynet_tcp_package.html][2016年03月: 在 skynet 中处理 TCP 的分包]]
+13. [[http://blog.codingnow.com/2016/01/reference_count.html][2016年01月: 基于引用计数的对象生命期管理]]
+14. [[http://blog.codingnow.com/2016/01/skynet_mq.html][2016年01月: skynet 消息队列的新设计(接上文)]]
+15. [[http://blog.codingnow.com/2016/01/skynet2.html][2016年01月: skynet 消息分发及服务调度的新设计]]
+16. [[http://blog.codingnow.com/2015/12/skynet_rc.html][2015年12月: Skynet 1.0.0 RC 版发布]]
+17. [[http://blog.codingnow.com/2015/12/skynet_coroutine.html][2015年12月: skynet 里的 coroutine]]
+18. [[http://blog.codingnow.com/2015/11/rpc.html][2015年11月: RPC 之恶]]
+19. [[http://blog.codingnow.com/2015/11/skynet_crontab.html][2015年11月: skynet 中实现一个 crontab 的方法]]
+20. [[http://blog.codingnow.com/2015/10/timeout_skynetcall.html][2015年10月: 给 skynet.call 加上超时]]
+21. [[http://blog.codingnow.com/2015/08/lua_vm_share_string.html][2015年08月: 共享 lua vm 间的小字符串]]
+22. [[http://blog.codingnow.com/2015/08/memory_leak_bug.html][2015年08月: 一个内存泄露 bug]]
+23. [[http://blog.codingnow.com/2015/08/skynet_cluster_rpc_limit.html][2015年08月: 去掉 skynet 中 cluster rpc 的消息长度限制]]
+24. [[http://blog.codingnow.com/2015/07/skynet_lua_allocator.html][2015年07月: lua 分配器的一些想法及实践]]
+25. [[http://blog.codingnow.com/2015/06/skynet_socket_sharedobject.html][2015年06月: skynet 对客户端广播的方案]]
+26. [[http://blog.codingnow.com/2015/05/sproto_default_value.html][2015年05月: sproto 的缺省值处理]]
+27. [[http://blog.codingnow.com/2015/04/ltask.html][2015年04月: ltask ：用于 lua 的多任务库]]
+28. [[http://blog.codingnow.com/2015/04/skynet_mmo.html][2015年04月: 基于 skynet 的 MMO 服务器设计]]
+29. [[http://blog.codingnow.com/2015/04/handlemap.html][2015年04月: 对象到数字 ID 的映射]]
+30. [[http://blog.codingnow.com/2015/04/skynet_sproto_bug.html][2015年04月: skynet 近期更新及 sproto 若干 bug 的修复]]
+31. [[http://blog.codingnow.com/2015/03/skynet_signal.html][2015年03月: 跳出死循环]]
+32. [[http://blog.codingnow.com/2015/02/skynet_10_plans.html][2015年02月: skynet 1.0 发布计划]]
+33. [[http://blog.codingnow.com/2015/02/skynet_debugger.html][2015年02月: 在线调试 Lua 代码]]
+34. [[http://blog.codingnow.com/2015/02/inject_lua_code.html][2015年02月: 怎样在运行时插入运行一段 Lua 代码]]
+35. [[http://blog.codingnow.com/2015/01/lua_53_update.html][2015年01月: Lua 5.3 升级注意]]
+36. [[http://blog.codingnow.com/2015/01/skynet_netpack.html][2015年01月: 为什么 skynet 提供的包协议只用 2 个字节表示包长度]]
+37. [[http://blog.codingnow.com/2015/01/lua_52_53.html][2015年01月: 从 Lua 5.2 迁移到 5.3]]
+38. [[http://blog.codingnow.com/2014/12/skynet_meeting.html][2014年12月: skynet 社区广州聚会小记]]
+39. [[http://blog.codingnow.com/2014/12/skynet_spinlock.html][2014年12月: 乐观锁和悲观锁]]
+40. [[http://blog.codingnow.com/2014/11/skynet_ae_udp_oeoe.html][2014年11月: skynet 的 UDP  支持]]
+41. [[http://blog.codingnow.com/2014/10/skynet_overload.html][2014年10月: skynet 服务的过载保护]]
+42. [[http://blog.codingnow.com/2014/08/ueeoca.html][2014年08月: 近日工作记录]]
+43. [[http://blog.codingnow.com/2014/08/stm.html][2014年08月: STM 的简单实现]]
+44. [[http://blog.codingnow.com/2014/07/skynet_response.html][2014年07月: skynet 中如何实现邮件达到通知服务]]
+45. [[http://blog.codingnow.com/2014/07/skynet_http.html][2014年07月: 给 skynet 增加 http 服务器模块]]
+46. [[http://blog.codingnow.com/2014/07/skynet_msgserver.html][2014年07月: skynet 消息服务器支持]]
+47. [[http://blog.codingnow.com/2014/07/skynet_short_connection.html][2014年07月: 计划给 skynet 增加短连接的支持]]
+48. [[http://blog.codingnow.com/2014/06/skynet_harbor_redesign.html][2014年06月: 重新设计并实现了 skynet 的 harbor 模块]]
+49. [[http://blog.codingnow.com/2014/06/skynet_tshirt.html][2014年06月: skynet 主题 T 恤]]
+50. [[http://blog.codingnow.com/2014/06/skynet_cluster.html][2014年06月: skynet 的集群方案]]
+51. [[http://blog.codingnow.com/2014/05/skynet_logo.html][2014年05月: skynet logo]]
+52. [[http://blog.codingnow.com/2014/05/skynet_o_logo.html][2014年05月: skynet 征集 logo]]
+53. [[http://blog.codingnow.com/2014/05/skynet_v020.html][2014年05月: skynet v0.2.0 发布]]
+54. [[http://blog.codingnow.com/2014/05/skynet_mq_flags.html][2014年05月: skynet 消息队列调度算法的一点说明]]
+55. [[http://blog.codingnow.com/2014/04/skynet_multicast.html][2014年04月: skynet 的新组播方案]]
+56. [[http://blog.codingnow.com/2014/04/skynet_release.html][2014年04月: Skynet 发布第一个正式版]]
+57. [[http://blog.codingnow.com/2014/04/skynet_snax.html][2014年04月: skynet 的 snax 框架及热更新方案]]
+58. [[http://blog.codingnow.com/2014/04/skynet_gate_lua_version.html][2014年04月: 对 skynet 的 gate 服务的重构]]
+59. [[http://blog.codingnow.com/2014/03/lua_shared_proto.html][2014年03月: 在不同的 lua vm 间共享 Proto]]
+60. [[http://blog.codingnow.com/2014/03/skynet_socket_channel.html][2014年03月: Skynet 新的 socket.channel 模式]]
+61. [[http://blog.codingnow.com/2014/03/mmzb_redis.html][2014年03月: 谈谈陌陌争霸在数据库方面踩过的坑( Redis 篇)]]
+62. [[http://blog.codingnow.com/2013/12/skynet_lua_alloc.html][2013年12月: skynet lua 服务的内存管理优化]]
+63. [[http://blog.codingnow.com/2013/12/skynet_agent_pool.html][2013年12月: skynet 服务启动优化]]
+64. [[http://blog.codingnow.com/2013/12/skynet_monitor.html][2013年12月: Skynet 的服务监控及远程调用]]
+65. [[http://blog.codingnow.com/2013/10/skynet_lua_coroutine.html][2013年10月: skynet 中 Lua 服务的消息处理]]
+66. [[http://blog.codingnow.com/2013/09/skynet_bootstrap.html][2013年09月: skynet 的启动流程中的异步 IO 问题]]
+67. [[http://blog.codingnow.com/2013/08/skynet_update.html][2013年08月: Skynet 的一次大更新]]
+68. [[http://blog.codingnow.com/2013/08/exit_skynet.html][2013年08月: 如何安全的退出 skynet ]]
+69. [[http://blog.codingnow.com/2013/07/skynet_mongo_driver.html][2013年07月: 给  skynet 添加 mongo driver]]
+70. [[http://blog.codingnow.com/2013/07/coroutine_reuse.html][2013年07月: coroutine 的回收利用]]
+71. [[http://blog.codingnow.com/2013/07/improve_skynet_socket_lib.html][2013年07月: 增强了 skynet 的 socket 库]]
+72. [[http://blog.codingnow.com/2013/07/hive_socket.html][2013年07月: Hive 增加了 socket 库]]
+73. [[http://blog.codingnow.com/2013/06/skynet_watchdog.html][2013年06月: skynet 下的用户登陆问题]]
+74. [[http://blog.codingnow.com/2013/06/hive_lua_actor_model.html][2013年06月: Hive , Lua 的 actor 模型]]
+75. [[http://blog.codingnow.com/2013/06/skynet_socket.html][2013年06月: 重写了 skynet 中的 socket 库]]
+76. [[http://blog.codingnow.com/2013/05/skynet_gate.html][2013年05月: skynet 的网关模块的一点修改]]
+77. [[http://blog.codingnow.com/2012/10/bug_and_lockfree_queue.html][2012年10月: 并发问题 bug 小记]]
+78. [[http://blog.codingnow.com/2012/09/the_design_of_skynet.html][2012年09月: Skynet 设计综述]]
+79. [[http://blog.codingnow.com/2012/08/skynet_bug.html][2012年08月: 记录一个并发引起的 bug]]
+80. [[http://blog.codingnow.com/2012/08/skynet_dev.html][2012年08月: Skynet 的一些改进和进展]]
+81. [[http://blog.codingnow.com/2012/08/skynet_harbor_rpc.html][2012年08月: Skynet 集群及 RPC ]]
+82. [[http://blog.codingnow.com/2012/08/skynet.html][2012年08月: Skynet 开源]]
