--- a/blog_by_date.org
+++ b/blog_by_date.org
@@ -1,18 +1,3 @@
-* 目录                                                                  :TOC_1_gh:
- - [[#2017年][2017年]]
- - [[#2016年][2016年]]
- - [[#2015年][2015年]]
- - [[#2014年][2014年]]
- - [[#2013年][2013年]]
- - [[#2012年][2012年]]
- - [[#2011年][2011年]]
- - [[#2010年][2010年]]
- - [[#2009年][2009年]]
- - [[#2008年][2008年]]
- - [[#2007年][2007年]]
- - [[#2006年][2006年]]
- - [[#2005年][2005年]]
-
 * 2017年
 ** 17年1月
 1. [[http://blog.codingnow.com/2017/01/lua_typesystem.html][一个简单的 lua 对象回收再利用方案]]
@@ -23,6 +8,14 @@
 1. [[http://blog.codingnow.com/2017/02/lua_direct_access_table.html][绕过 c api 直接访问 lua 表]]
 2. [[http://blog.codingnow.com/2017/02/windows_path_sep.html][为什么 Windows 的文件系统会有盘符，使用反斜杠分割路径]]
 3. [[http://blog.codingnow.com/2017/02/tracedoc.html][跟踪数据结构的变更]]
+** 17年3月
+1. [[http://blog.codingnow.com/2017/03/skynet_cluster.html][skynet  cluster 模块的设计与编码协议]]
+2. [[http://blog.codingnow.com/2017/03/skynet_1_1_rc.html][skynet 1.1 发布候选版本]]
+3. [[http://blog.codingnow.com/2017/03/lua_debugger.html][Lua 调试器]]
+4. [[http://blog.codingnow.com/2017/03/sproto_new_feature.html][sproto 的一些更新]]
+** 17年4月
+1. [[http://blog.codingnow.com/2017/04/git.html][为什么美术和策划在使用 git 时会遇到更多麻烦]]
+2. [[http://blog.codingnow.com/2017/04/unity3d_memory.html][Unity3D 的大场景内存优化]]
 * 2016年
 ** 16年1月
 1. [[http://blog.codingnow.com/2016/01/assets.html][资源包的设计]]
